first commit, updating frontend

--- a/html/index.html
+++ b/html/index.html
@@ -4,18 +4,36 @@
     <meta charset="UTF-8">
     <title>Front Page</title>
 
-    <script src="../js/fetch-methods.js"></script>
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="../js/navbar.js" defer></script>
+    <!-- //////////     BOOTSTRAP CSS    \\\\\\\\\\\ -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <!-- //////////     PERSONAL CSS    \\\\\\\\\\\ -->
     <link rel="stylesheet" href="../css/style.css">
+
+    <!-- //////////     FOREIGN SCRIPTS    \\\\\\\\\\\ -->
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
+    <!-- //////////     PERSONAL SCRIPTS    \\\\\\\\\\\ -->
+    <script src="../js/util/fetch-handling.js"></script>
+    <script src="../js/util/promise-handling.js"></script>
+    <script src="../js/util/form-handling.js"></script>
+    <script src="../js/navbar.js" defer></script>
+    <script src="../js/index.js" defer></script>
 
 </head>
 <body>
+    <!-- //////////     HEADER    \\\\\\\\\\\ -->
+    <header id="navigation-bar"> </header>
 
-    <div id="navigation-bar"> </div>
+    <!-- //////////     MAIN CONTENT    \\\\\\\\\\\ -->
+    <main>
 
+        <h1>MIN FORSIDE</h1>
 
-<h1>MIN FORSIDE</h1>
+    </main>
+
+    <!-- //////////     FOOTER    \\\\\\\\\\\ -->
+    <footer id="footer-bar"></footer>
+
 </body>
 </html>
