--- a/html/navbar.html
+++ b/html/navbar.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>navbar</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- //////////     BOOTSTRAP CSS    \\\\\\\\\\\ -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- //////////     PERSONAL CSS    \\\\\\\\\\\ -->
     <link rel="stylesheet" href="../css/navbar.css">
+
+    <!-- //////////     FOREIGN SCRIPTS    \\\\\\\\\\\ -->
+
+
+    <!-- //////////     PERSONAL SCRIPTS    \\\\\\\\\\\ -->
+
 
 </head>
 <body>
