Just updating navbar

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -20,16 +20,13 @@
 </head>
 <body>
 
-<div class="topnav" id="myTopnav">
+<nav class="topnav navbar" id="myTopnav">
+    <a href="index.html">Home</a>
     <a href="index.html">Home</a>
     <a href="https://www.youtube.com/">YouTube</a>
-</div>
+</nav>
 
-<div style="padding-left:16px">
-</div>
 
-<br>
-<br>
 
 </body>
 </html>
