Lavede de sidste ændringer inden aflevering

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- //////////     PERSONAL CSS    \\\\\\\\\\\ -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/index.css">
 
     <!-- //////////     FOREIGN SCRIPTS    \\\\\\\\\\\ -->
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
@@ -20,20 +20,40 @@
     <script src="../js/navbar.js" defer></script>
     <script src="../js/index.js" defer></script>
 
+
 </head>
 <body>
     <!-- //////////     HEADER    \\\\\\\\\\\ -->
-    <header id="navigation-bar"> </header>
+    <header >
+
+        <div id="navigation-bar"></div>
+        <br>
+        <br>
+        <br>
+        <h1>Onsdagskapsejlads I Roskilde Sejlklub</h1>
+    </header>
 
     <!-- //////////     MAIN CONTENT    \\\\\\\\\\\ -->
     <main>
+        <section class="container">
+            <p>Velkommen til Roskilde Sejlklub - dit foretrukne sted for spændende kapsejladser og sejleroplevelser.</p>
 
-        <h1>MIN FORSIDE</h1>
+            <p>Forestil dig at skulle håndtere afviklingen af vores ugentlige kapsejladser, der finder sted hver onsdag fra 1. maj til 1. oktober. Vi afholder tre kapsejladser, én for hver af vores tre bådtyper.</p>
 
+            <p>Vores sejlbåde er opdelt i tre kategorier: længere end 40 fod, mindre end 25 fod og 25-40 fod. Efter hver sejlads tildeles bådene point baseret på deres placering i dagens løb.</p>
+
+            <p>Der er i alt 3 gange antallet af onsdage i perioden fra 1. maj til 1. oktober 2023 antal kapsejladser. Vinderen af hver kapsejlads tildeles 1 point, nummer 2 får 2 point, og så videre. Den samlede vinder ved sæsonafslutningen er den båd med færrest point.</p>
+
+            <br>
+            <br>
+
+            <div class="image-container">
+                <img src="../.idea/images/RoskildeLogo.png" alt="Image of Logo">
+                <img src="../.idea/images/pointberegning.png" alt="Image of Pointberegning">
+            </div>
+        </section>
     </main>
 
-    <!-- //////////     FOOTER    \\\\\\\\\\\ -->
-    <footer id="footer-bar"></footer>
 
 </body>
 </html>
