--- a/html/navbar.html
+++ b/html/navbar.html
@@ -21,9 +21,9 @@
 <body>
 
 <nav class="topnav navbar" id="myTopnav">
-    <a href="index.html">Home</a>
-    <a href="index.html">Home</a>
-    <a href="https://www.youtube.com/">YouTube</a>
+    <a href="index.html">Forside</a>
+    <a href="sailboat.html">Sejlbåde</a>
+    <a href="contestant.html">Deltagerer</a>
 </nav>
 
 
