Flyttede image mappen id af .idea mappen

--- a/html/index.html
+++ b/html/index.html
@@ -48,8 +48,8 @@
             <br>
 
             <div class="image-container">
-                <img src="../.idea/images/RoskildeLogo.png" alt="Image of Logo">
-                <img src="../.idea/images/pointberegning.png" alt="Image of Pointberegning">
+                <img src="../images/RoskildeLogo.png" alt="Image of Logo">
+                <img src="../images/pointberegning.png" alt="Image of Pointberegning">
             </div>
         </section>
     </main>
